assets/css/overrides.css
body, input, select, textarea {
    color: rgba(255, 255, 255, 0.85);
}

#footer > .inner .menu {
    color: rgba(255, 255, 255, 0.75);
}

a:focus, #sidebar nav a:focus {
        outline: dotted #fff;
        color: rgba(255, 255, 255, 0.95);
    }

a.clearOutline:focus, #sidebar nav a.clearOutline:focus {
    outline: 0;
}

#sidebar nav a {
    color: rgba(255, 255, 255, 0.65);                    
    }

#sidebar nav a:hover {
    color: rgba(255, 255, 255, 0.95);
}

